--- a/Webcarto.css
+++ b/Webcarto.css
@@ -14,7 +14,7 @@ width: 100%;
   color: white;
   text-decoration: none;
   font-size: 17px;
-  width: 25%; /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
+  width: 23%; /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
   text-align: center; /* If you want the text to be centered */
 }
 
@@ -28,13 +28,9 @@ width: 100%;
   background-color: #04AA6D;
 }
 
-/* Add responsiveness - on screens less than 500px, make the navigation links appear on top of each other, instead of next to each other */
-@media screen and (max-width: 500px) {
-  .navbar a {
-    float: none;
-    display: block;
-    width: 100%;
-    text-align: left; /* If you want the text to be left-aligned on small screens */
-  }
-}	
-	
+.subcontainer {
+  background-color: #04AA6D;
+  height: 300px;
+  width: 30%;
+  margin: 10px;
+}
